# document-tool-server

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-10-03-232800_pages/: up.sql
migrations/2021-10-17-043023_elements/: up.sql
src/: main.rs  models.rs  schema.rs
